Added Java Docs